Updated iot-and-aiot authors.

--- a/3d-printed-wireless-sensor-nodes.mdx
+++ b/3d-printed-wireless-sensor-nodes.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Design and Calibration of a 3D-Printed Cup-Vane Wireless Sensor Node"
 description: "Development of cost-effective wireless environmental sensing systems for IoT applications"
-contributors: "sam-macharia"
+contributors: "sam-macharia,christian-gradl,jean-byiringiro,harrison-ngetha"
 tags: ["wireless-sensors", "3d-printing", "environmental-monitoring", "IoT", "wind-energy"]
 excerpt: "This research presents the design and calibration of a 3D-printed cup-vane wireless sensor node for comprehensive environmental monitoring, demonstrating innovative approaches to cost-effective IoT sensor development."
-pubDate: 2025-09-15
+pubDate: 2025-09-20
 ---
 
 import IoTAIoTComments from '../../../../components/iot-and-aiot/IoTAIoTComments.astro';
