--- a/iot-precision-agriculture-integration.mdx
+++ b/iot-precision-agriculture-integration.mdx
@@ -4,7 +4,7 @@ description: "Comprehensive study of IoT applications in precision agriculture f
 contributors: "charles-mzigo,wiktoria-sarzynska,charles-kagiri,sam-macharia"
 tags: ["precision-agriculture", "IoT", "water-efficiency", "smallholder-farming", "sustainable-agriculture"]
 excerpt: "This research demonstrates practical IoT integration in smallholder agriculture, achieving up to 36.9% water savings through combined IoT precision irrigation, intercropping, and gravity-fed drip systems."
-pubDate: 2025-09-15
+pubDate: 2025-09-20
 ---
 
 import IoTAIoTComments from '../../../../components/iot-and-aiot/IoTAIoTComments.astro';
@@ -37,6 +37,8 @@ The research demonstrates that combining IoT precision irrigation with intercrop
 **DOI**: [10.31763/iota.v4i2.992](https://pubs.ascee.org/index.php/iota/article/view/992)  
 **Publisher**: ASCEE Publications  
 **Type**: Original Research Article
+
+**Supplementary Material**: [github.com/SiliconWit/iot-irrigation-system](https://github.com/SiliconWit/iot-irrigation-system)
 
 </Card>
 
