Updated research navigation to Applied Engineering Research

--- a/3d-printed-wireless-sensor-nodes.mdx
+++ b/3d-printed-wireless-sensor-nodes.mdx
@@ -4,12 +4,13 @@ description: "Development of cost-effective wireless environmental sensing syste
 contributors: "sam-macharia,christian-gradl,jean-byiringiro,harrison-ngetha"
 tags: ["wireless-sensors", "3d-printing", "environmental-monitoring", "IoT", "wind-energy"]
 excerpt: "This research presents the design and calibration of a 3D-printed cup-vane wireless sensor node for comprehensive environmental monitoring, demonstrating innovative approaches to cost-effective IoT sensor development."
-pubDate: 2025-09-20
+pubDate: 2025-08-28
 ---
 
 import IoTAIoTComments from '../../../../components/iot-and-aiot/IoTAIoTComments.astro';
 import TawkWidget from '../../../../components/TawkWidget.astro';
 import UniversalContentContributors from '../../../../components/UniversalContentContributors.astro';
+import InArticleAd from '../../../../components/InArticleAd.astro';
 import Copyright from '../../../../components/Copyright.astro';
 import BionicText from '../../../../components/BionicText.astro';
 import TailwindWrapper from '../../../../components/TailwindWrapper.jsx';
@@ -41,6 +42,9 @@ The research demonstrates how 3D printing technology can be leveraged to create 
 </Card>
 
 ## 🔬 Research Summary
+
+<InArticleAd />
+
 
 <Tabs>
   <TabItem label="Key Innovation">
@@ -167,6 +171,9 @@ The research demonstrates how 3D printing technology can be leveraged to create 
 
 ## 🔍 Detailed Analysis
 
+<InArticleAd />
+
+
 ### Hardware Design Innovation
 
 The research presents a comprehensive approach to sensor node development:
@@ -238,6 +245,7 @@ For comprehensive details on sensor design, calibration procedures, and IoT impl
 
 This research provides practical insights for developing cost-effective IoT sensor systems and demonstrates the potential of 3D printing technology in environmental monitoring applications.
 
+<InArticleAd />
 <IoTAIoTComments />
 <TawkWidget />
 <Copyright />
