Updated iot research image

--- a/iot-precision-agriculture-integration.mdx
+++ b/iot-precision-agriculture-integration.mdx
@@ -2,9 +2,10 @@
 title: "Practical Integration of IoT, Intercropping, and Gravity-Fed Drip Systems for Water-Efficient Smallholder Farming"
 description: "Comprehensive study of IoT applications in precision agriculture for sustainable water management"
 contributors: "charles-mzigo,wiktoria-sarzynska,charles-kagiri,sam-macharia"
+pubDate: 2025-08-28
 tags: ["precision-agriculture", "IoT", "water-efficiency", "smallholder-farming", "sustainable-agriculture"]
 excerpt: "This research demonstrates practical IoT integration in smallholder agriculture, achieving up to 36.9% water savings through combined IoT precision irrigation, intercropping, and gravity-fed drip systems."
-pubDate: 2025-08-28
+heroImage: "https://cdn.siliconwit.com/research/applied-engineering/practical-integration-of-IoT-intercropping-and-gravity-fed-drip-systems-for-water-efficient-smallholder-farming.png"
 ---
 
 import IoTAIoTComments from '../../../../components/iot-and-aiot/IoTAIoTComments.astro';
