Add TawkWidget component

--- a/index.mdx
+++ b/index.mdx
@@ -6,6 +6,7 @@ description: Exploring Internet of Things and Artificial Intelligence of Things 
 import { Card, CardGrid, Badge, Steps } from '@astrojs/starlight/components';
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import Copyright from '../../../../components/Copyright.astro';
+import TawkWidget from '../../../../components/TawkWidget.astro';
 
 <div style="display: flex; justify-content: center; gap: 0.5rem; flex-wrap: wrap; margin-top: 1rem;">
 <Badge text="Active Research" variant="success" />
@@ -204,3 +205,5 @@ Our IoT and AIoT research program collaborates with international partners and c
 The research provides practical solutions for real-world challenges while advancing the state of knowledge in IoT system design, implementation, and sustainable deployment strategies.
 
 <Copyright />
+
+<TawkWidget />
